--- a/Site/html/index.html
+++ b/Site/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <div>
-        <a href="index.html">
+        <a href="table.html">
             <img src="../img/logo.png" width="100" height="100" alt="404 logo">
         </a>
     </div>
