--- a/Site/html/index.html
+++ b/Site/html/index.html
@@ -3,50 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../img/logo.png" type="image/png">
+    <link rel="icon" href="../img/logo33.png" type="image/png">
     <title>My Site</title>
 </head>
 <header>
-    <div>
-        <a href="table.html">
-            <img src="../img/logo.png" width="100" height="100" alt="404 logo">
-        </a>
+    <div></div>
+    <div align="center">
+        <a href="table.html" class="logo"></a>
     </div>
+    <div></div>
 </header>
 <body>
-<div class="left_bar">
-    <img src="../img/photo.jpg" alt=" 404 photo">
-</div>
-<div class="right_bar">
-    <div class="right_bar_t">
-        Астафьев Никита Игоревич
+    <div class="main_content">
+        <div class="left_bar">
+            <img src="../img/photo.jpg" alt=" 404 photo">
+        </div>
+        <div class="right_bar">
+            <div class="right_bar_t">
+                Астафьев Никита Игоревич
+            </div>
+            <div class="right_bar_l">
+                Обо мне:
+                <br>
+                Закончил магистратуру в МГТУ им. Г.И. Носова по специальности: Электроника и наноэлектроника.
+                <br>
+                Из хобби наверное можно выделить что люблю поиграть на ПК, порисовать в таких программах как CorelDraw, PS, SAI, вот как пример одна из работ:
+                <br>
+                <img src="../img/img.png" alt=" 404 img">
+                <br>
+                Работал графическим дизайнером в компании МагПленка, Полимеры магнитки и так же фрилансил по графике.
+                <br>
+                Сейчас нацелен успешно пройти учебный курс и трудоустроиться в вашу компанию.
+            </div>
+            <div class="right_bar_r">
+                Отзыв:
+                <br>
+                Первая неделя занятий была очень продуктивная, узнал немало нового, да и подтянул старые знания.
+                <br>
+                Занятия очень интересные, на них не заскучаешь, все достаточно подробно и ясно объясняют.
+                <br>
+                Темп занятий меня устравает, но иногда очень долго разбираем то что у кого то не получается, а так все супер!
+                <br>
+                Сложностей пока ни с чем не возникло и надеюсь в дальнейшем их не будет!
+            </div>
     </div>
-    <div class="right_bar_l">
-        Обо мне:
-        <br>
-        Закончил магистратуру в МГТУ им. Г.И. Носова
-        по специальности: Электроника и наноэлектроника.
-        <br>
-        Из хобби наверное можно выделить что люблю поиграть на ПК, порисовать в таких программах как CorelDraw, PS, SAI, вот как пример одна из работ:
-        <br>
-        <img src="../img/img.png" alt=" 404 img">
-        <br>
-        Работал графическим дизайнером в компании МагПленка, Полимеры магнитки и так же фрилансил по графике.
-        <br>
-        Сейчас нацелен успешно пройти учебный курс и трудоустроиться в вашу компанию.
+        <a name="flex">
+            <section class="container-flex">
+            <div class="anim">
+                <div class="flex-item"><img src="../img/navi.png" alt="404"></div>
+                <div class="flex-item">NAVI</div>
+            </div>
+            <div class="anim">
+                <div class="flex-item"><img src="../img/g2.png" alt="404"></div>
+                <div class="flex-item">G2</div>
+            </div>
+            <div class="anim">
+                <div class="flex-item"><img src="../img/gambit.png" alt="404"></div>
+                <div class="flex-item">GAMBIT</div>
+            </div>
+            <div class="anim">
+                <div class="flex-item"><img src="../img/heroic.png" alt="404"></div>
+                <div class="flex-item">HEROIC</div>
+            </div>
+        </section>
+        </a>
+        <section class="container-grid">
+            <div class="anim">
+                <div><img src="../img/navi.png" alt="404"></div>
+                <div>NAVI</div>
+            </div>
+            <div class="anim">
+                <div><img src="../img/g2.png" alt="404"></div>
+                <div>G2</div>
+            </div>
+            <div class="anim">
+                <div><img src="../img/gambit.png" alt="404"></div>
+                <div>GAMBIT</div>
+            </div>
+            <div class="anim">
+                <div><img src="../img/heroic.png" alt="404"></div>
+                <div>HEROIC</div>
+            </div>
+        </section>
     </div>
-    <div class="right_bar_r">
-        Отзыв:
-        <br>
-        Первая неделя занятий была очень продуктивная, узнал немало нового, да и подтянул старые знания.
-        <br>
-        Занятия очень интересные, на них не заскучаешь, все достаточно подробно и ясно объясняют.
-        <br>
-        Темп занятий меня устравает, но иногда очень долго разбираем то что у кого то не получается, а так все супер!
-        <br>
-        Сложностей пока ни с чем не возникло и надеюсь в дальнейшем их не будет!
-    </div>
-</div>
-<div></div>
 </body>
+<footer>
+    <div class="information-footer">FOOTER</div>
+</footer>
 </html>
