--- a/Site/html/index.html
+++ b/Site/html/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../img/logo33.png" type="image/png">
+    <link rel="icon" href="../img/logo-fav.png" type="image/png">
+    <script src="https://use.fontawesome.com/1630570716.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Site</title>
 </head>
 <header>
@@ -15,27 +17,24 @@
 </header>
 <body>
     <div class="main_content">
-        <div class="left_bar">
-            <img src="../img/photo.jpg" alt=" 404 photo">
-        </div>
-        <div class="right_bar">
-            <div class="right_bar_t">
-                Астафьев Никита Игоревич
-            </div>
-            <div class="right_bar_l">
+        <div class="about-me">
+            <div class="photo"><img src="../img/photo.jpg" alt=" 404 photo" width="350"></div>
+            <div class="top">Астафьев Никита Игоревич</div>
+            <div class="left">
                 Обо мне:
                 <br>
-                Закончил магистратуру в МГТУ им. Г.И. Носова по специальности: Электроника и наноэлектроника.
+                Закончил магистратуру в МГТУ им. Г.И. Носова
+                по специальности: Электроника и наноэлектроника.
                 <br>
                 Из хобби наверное можно выделить что люблю поиграть на ПК, порисовать в таких программах как CorelDraw, PS, SAI, вот как пример одна из работ:
                 <br>
-                <img src="../img/img.png" alt=" 404 img">
+                <img src="../img/img.png" alt=" 404 img" width="350">
                 <br>
                 Работал графическим дизайнером в компании МагПленка, Полимеры магнитки и так же фрилансил по графике.
                 <br>
                 Сейчас нацелен успешно пройти учебный курс и трудоустроиться в вашу компанию.
             </div>
-            <div class="right_bar_r">
+            <div class="right">
                 Отзыв:
                 <br>
                 Первая неделя занятий была очень продуктивная, узнал немало нового, да и подтянул старые знания.
@@ -46,9 +45,8 @@
                 <br>
                 Сложностей пока ни с чем не возникло и надеюсь в дальнейшем их не будет!
             </div>
-    </div>
-        <a name="flex">
-            <section class="container-flex">
+        </div>
+        <section class="container-flex">
             <div class="anim">
                 <div class="flex-item"><img src="../img/navi.png" alt="404"></div>
                 <div class="flex-item">NAVI</div>
@@ -66,28 +64,21 @@
                 <div class="flex-item">HEROIC</div>
             </div>
         </section>
-        </a>
-        <section class="container-grid">
-            <div class="anim">
-                <div><img src="../img/navi.png" alt="404"></div>
-                <div>NAVI</div>
-            </div>
-            <div class="anim">
-                <div><img src="../img/g2.png" alt="404"></div>
-                <div>G2</div>
-            </div>
-            <div class="anim">
-                <div><img src="../img/gambit.png" alt="404"></div>
-                <div>GAMBIT</div>
-            </div>
-            <div class="anim">
-                <div><img src="../img/heroic.png" alt="404"></div>
-                <div>HEROIC</div>
-            </div>
-        </section>
+
     </div>
 </body>
 <footer>
-    <div class="information-footer">FOOTER</div>
+    <div class="footer-main">
+        <div></div>
+        <div></div>
+        <div class="social-network">
+            <ul class="social-icons">
+                <li><a href="https://vk.com/"><i class="fa fa-vk"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
 </html>
